# Polynomial

./: CMakeLists.txt  List.hpp  Monom.hpp  Polynomial.cpp  Polynomial.hpp  Polynomial.sln  Polynomial.vcxproj  Polynomial.vcxproj.filters  README.md  main.cpp
headers/: List.hpp  Monom.hpp  Polynomial.hpp
sources/: Polynomial.cpp
